# raspberry-pi-optimized-full-voice-pipeline

./: .gitmodules  LICENSE  NOTICE  start.sh  stop.sh  voice-start.sh  voice-stop.sh
llama/: DESIGN.md  README.md  info.txt  install.sh  pyproject.toml
llama/examples/: demo.py
llama/llama_chat/: __init__.py  _backend.py  config.py  context.py  messages.py  persistence.py  template.py  template_extract.py  wrapper.py
llama/tests/: fake_context.py  test_messages.py  test_persistence.py  test_template_extract.py  test_wrapper.py
piper/test/: synth_all_voices.py
webui/: app.py  gen-cert.sh  index.html  led_controller.py  voice_loop.py
whisper/: install.sh
