[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llama_chat"
version = "1.0.0"
description = "A KV-cache managing chat wrapper around llama.cpp: prefill as little as possible, evict-and-shift the oldest messages."
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The dataclasses use PEP 604 `X | None` annotations evaluated at runtime by
# @dataclass (needs 3.10+); 3.11 is the oldest version the package is tested on.
requires-python = ">=3.11"
dependencies = [
    # Build llama-cpp-python from source per machine (see install.sh):
    #   CPU:        CMAKE_ARGS="-DGGML_NATIVE=ON" pip install --no-binary llama-cpp-python
    #   Nvidia GPU: CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["llama_chat*"]
